# delphinis_v2

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  deploy-pages.yml
games/: CMakeLists.txt
games/hello/: HelloScreen.cpp  HelloScreen.h  SecondScreen.cpp  SecondScreen.h  main.cpp
games/missile_command/: MissileCommandGameScreen.cpp  MissileCommandGameScreen.h  StartMenuScreen.cpp  StartMenuScreen.h  main.cpp
games/missile_command/components/: City.h  GameState.h  MissileBattery.h  PlayerMissile.h
games/missile_command/constants/: MissileCommandConstants.h
games/missile_command/systems/: MouseInputSystem.cpp  MouseInputSystem.h  PlayerMissileSystem.cpp  PlayerMissileSystem.h
games/pong/: EndScreen.cpp  EndScreen.h  PongGameScreen.cpp  PongGameScreen.h  StartMenuScreen.cpp  StartMenuScreen.h  main.cpp
games/pong/components/: AIController.h  Ball.h  PaddleBoundary.h  PaddleCollider.h  PaddleInput.h
games/pong/constants/: PongConstants.h
games/pong/systems/: AISystem.cpp  AISystem.h  BallSystem.cpp  BallSystem.h  BoundarySystem.cpp  BoundarySystem.h  InputSystem.cpp  InputSystem.h  PaddleCollisionSystem.cpp  PaddleCollisionSystem.h  WallCollisionSystem.cpp  WallCollisionSystem.h
include/delphinis/audio/: AudioManager.h
include/delphinis/components/: AIController.h  Ball.h  BoxCollider.h  Sprite.h  Text.h  Transform.h  Velocity.h  Wall.h
include/delphinis/ecs/: ComponentPool.h  Entity.h  System.h  View.h  World.h
include/delphinis/input/: InputManager.h
include/delphinis/math/: Mat4.h  Vec2.h
include/delphinis/renderer/: Camera.h  FontAtlas.h  PixelCanvas.h  QuadRenderer.h  Shader.h  TexturedQuadRenderer.h
include/delphinis/screens/: Screen.h  ScreenManager.h
include/delphinis/systems/: AISystem.h  BallSystem.h  CollisionSystem.h  InputSystem.h  MovementSystem.h  RenderSystem.h  TextRenderingSystem.h
src/delphinis/audio/: AudioManager.cpp
src/delphinis/ecs/: World.cpp
src/delphinis/input/: InputManager.cpp
src/delphinis/renderer/: Camera.cpp  FontAtlas.cpp  PixelCanvas.cpp  QuadRenderer.cpp  Shader.cpp  TexturedQuadRenderer.cpp  embedded_font.h
src/delphinis/screens/: Screen.cpp  ScreenManager.cpp
src/delphinis/systems/: AISystem.cpp  BallSystem.cpp  CollisionSystem.cpp  InputSystem.cpp  MovementSystem.cpp  RenderSystem.cpp  TextRenderingSystem.cpp
web/: README.md  shell.html
